// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordStrengthChecker /> renders when password is fair 1`] = `
<div>
  <div
    class="wrapper"
    id="password-strength-checker"
  >
    <div
      class="head"
    >
      <p>
        Password Strength
      </p>
      <p
        class="title fair"
      >
        Fair
      </p>
    </div>
    <div
      class="bar-container"
    >
      <div
        class="bar fair"
      />
    </div>
    <p
      class="description"
    >
      Your Password is easily guessable!
    </p>
  </div>
</div>
`;

exports[`<PasswordStrengthChecker /> renders when password is good 1`] = `
<div>
  <div
    class="wrapper"
    id="password-strength-checker"
  >
    <div
      class="head"
    >
      <p>
        Password Strength
      </p>
      <p
        class="title good"
      >
        Good
      </p>
    </div>
    <div
      class="bar-container"
    >
      <div
        class="bar good"
      />
    </div>
    <p
      class="description"
    >
      Your Password is easily guessable!
    </p>
  </div>
</div>
`;

exports[`<PasswordStrengthChecker /> renders when password is strong 1`] = `
<div>
  <div
    class="wrapper"
    id="password-strength-checker"
  >
    <div
      class="head"
    >
      <p>
        Password Strength
      </p>
      <p
        class="title strong"
      >
        Strong
      </p>
    </div>
    <div
      class="bar-container"
    >
      <div
        class="bar strong"
      />
    </div>
    <p
      class="description"
    >
      Your Password is STRONG!
    </p>
  </div>
</div>
`;

exports[`<PasswordStrengthChecker /> renders when password is weak 1`] = `
<div>
  <div
    class="wrapper"
    id="password-strength-checker"
  >
    <div
      class="head"
    >
      <p>
        Password Strength
      </p>
      <p
        class="title weak"
      >
        Weak
      </p>
    </div>
    <div
      class="bar-container"
    >
      <div
        class="bar weak"
      />
    </div>
    <p
      class="description"
    >
      Your Password is easily guessable!
    </p>
  </div>
</div>
`;
